--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ NEXT_PUBLIC_BASE_URL=https://app.clevercsrd.ai
 # Benchmark: https://app.clevercsrd.ai/benchmark
 # CSRD: https://app.clevercsrd.ai/csrd  
 # Support: https://app.clevercsrd.ai/support
+
+# NextAuth Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret-here
+
+# Cidaas OIDC Configuration
+CIDAAS_CLIENT_ID=1401d46e-ad31-4b36-98e3-9a740a14a64b
+CIDAAS_CLIENT_SECRET=fe7f18a5-4497-4a02-ad20-23f9cc30bd3b
+
+# Supabase Configuration (for NextAuth adapter)
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
