--- a/apps/support/package.json
+++ b/apps/support/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --port 3003",
+    "dev": "./start-dev.sh",
     "lint": "next lint",
     "start": "next start"
   },
